--- a/public/css/mobile2.css
+++ b/public/css/mobile2.css
@@ -12,7 +12,10 @@ body {
 }
 
 h1 {
-    font-size: 56px;
+    font-size: 45px;
+}
+p {
+    font-size: 16px;
 }
 
 .title {
@@ -91,7 +94,7 @@ select {
     -moz-appearance: none;
     appearance: none;
     background-color: #ffffff;
-    font-size: 24px;
+    font-size: 16px;
     height: 60px;
 }
 
@@ -218,45 +221,51 @@ select:after {
 
 .triggered-info {
     min-height: 100px;
-    font-size: 30px;
+    font-size: 22px;
     color: #024C64;
 }
 .triggered-info .option {
     display: none;
 }
 
+.value-trigger {
+    margin-top: 40px;
+}
+
 #slideshow {
     transition: .25s linear;
 }
 
-.value_bar {
-    min-width: 10px;
-    max-width: 60px;
-    min-height: 10px;
+.value_bar p{
+    min-width: 20px;
+    min-height: 20px;
     max-height: 60px;
+    max-width: 60px;
     border-style: solid;
-    border-width: 2px;
-    border-color: grey;
+    border-width: 1px;
+    border-color: #959595;
     background-color: #ffffff;
+    padding-left: 5px;
 }
 
-.value_bar.checked {
+.value_bar.checked p{
     background-color: #959595;
 }
 
-.value_bar_container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 15px;
-    padding-left: 15px;
+.value_bar_container p {
+    color: black;
+    font-size: 15px;
 }
-
+/*
 .value_bar p{
     padding-top: 18px;
     padding-bottom: 18px;
     padding-left: 23px;
     margin-bottom: 0px;
-}
+    font-weight: bold;
+    font-size: 16px;
+}*/
+
 
 .row.actions {
     margin-top: 15px;
